@@ -95,6 +95,7 @@ a:link  		{color:#FF5F00; text-decoration:none;}
 a:visited		{color:#FF5F00; text-decoration:none;}
 a:hover			{color:#FF3B00; text-decoration:none;}
 a:active		{color:#FF5F00; text-decoration:none;}
+.maxwrap		{margin:0 auto; width:100%;}
 table td, table th	{cursor:auto;}
 
 table.pub		{width:600px; max-width:600px; text-align:right; font-size:0.9em; line-height:1.4em;}
