@@ -11,12 +11,14 @@
 
 #dash_cronlog_body
 <div class="default data">
-	<div style="margin:0 auto; width:100%;">
-		<p>Updated everyday GMT +0.</p> 
-		<p>Last updated on {dash_last_updated}</p>
-<pre>
-{dash_cronlog}
-</pre>
+	<div class="maxwrap">
+		<div class="title">Updated everyday GMT +0.</div> 
+		<div class="title_snap">Last updated on {dash_last_updated}</div>
+		<pre>{dash_cronlog}</pre>
 		<a href="#view=dash" class="back_link dash">Back to publisher list</a>
 	</div>
 </div>
+
+
+#css
+pre {font-family:monospace; padding:40px; background-color:#000; color:#00FF00; line-height:2em; font-size:0.8em;}
