@@ -24,7 +24,7 @@
 
 #dash_quality_body
 <div class="default data">
-	<div style="margin:0 auto; width:100%;">
+	<div class="maxwrap">
 		<table class="name">
 			<tr>
 				<td>Publisher Name:</td>
