@@ -4,6 +4,7 @@ CSS cleanup
 Layouts for new columns
 More tables for more tables
 Added links to country codes
+Styles for new cronlog page
 
 
 Development Portal (2014-06-18 shi)
